[project]
name = "dots-and-boxes"
version = "0.1.0"
description = "Interactive visualization of DQN agents learning Dots and Boxes"
authors = [
    {name = "Jared Neumann",email = "jared@neumannsworkshop.com"}
]
dependencies = [
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
    "tensorflow>=2.8.0",
    "numpy>=1.19.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
